IEP-1618: review comments resolved